--- a/stmACS.ioc
+++ b/stmACS.ioc
@@ -2,31 +2,42 @@
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM3
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F103R(8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PB10
+Mcu.Pin11=PC7
+Mcu.Pin12=PA8
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PB3
+Mcu.Pin18=PB4
+Mcu.Pin19=PB6
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PB8
+Mcu.Pin21=PB9
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PC7
-Mcu.Pin9=PA8
-Mcu.PinsNb=16
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -45,6 +56,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=buzzer
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -78,6 +93,14 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=LUZ
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=CLK
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=barrierInput
 PA8.Locked=true
@@ -86,10 +109,26 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=isThisThatStep
 PA9.Locked=true
 PA9.Signal=GPIO_Input
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=diode2
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
 PB3.Locked=true
-PB3.Signal=SYS_JTDO-TRACESWO
+PB3.Signal=S_TIM2_CH2
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=M1
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=DIR
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=B1 [Blue PushButton]
 PC13-TAMPER-RTC.GPIO_PuPd=GPIO_NOPULL
@@ -146,7 +185,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -172,8 +211,17 @@ RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period
+TIM2.Period=999
+TIM2.Prescaler=71
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation2 CH2
 TIM3.Period=19999
@@ -182,6 +230,8 @@ USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F103RB
